--- a/ror/app/views/layouts/application.html.slim
+++ b/ror/app/views/layouts/application.html.slim
@@ -21,7 +21,7 @@ html
             li.nav-item
               = link_to "Feeds", root_path, class: "nav-link"
             li.nav-item
-              = link_to "Entries", '#entries_path', class: "nav-link"
+              = link_to "Items", items_path, class: "nav-link"
           /   li.nav-item.dropdown
           /     a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"]
           /       |  Dropdown
