Decorate preview a bit and redirect after url assignment

--- a/ror/app/views/items/index.html.slim
+++ b/ror/app/views/items/index.html.slim
@@ -2,10 +2,10 @@ p style="color: green" = notice
 
 h1 Items
 
-#items
+#items.accordion
   - @items.each do |item|
     == render item
-    p
-      = link_to "Show this item", item
+    / p
+    /   = link_to "Show this item", item
 
-= link_to "New item", new_item_path
+/ = link_to "New item", new_item_path
