--- a/ror/app/views/layouts/application.html.slim
+++ b/ror/app/views/layouts/application.html.slim
@@ -22,6 +22,8 @@ html
               = link_to "Feeds", root_path, class: "nav-link"
             li.nav-item
               = link_to "Items", items_path, class: "nav-link"
+            li.nav-item
+              = link_to "Import feeds", import_feeds_feeds_path, class: "nav-link"
           /   li.nav-item.dropdown
           /     a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"]
           /       |  Dropdown
