--- a/ror/app/views/layouts/application.html.slim
+++ b/ror/app/views/layouts/application.html.slim
@@ -11,19 +11,20 @@ html
   body
     nav.navbar.navbar-expand-lg.bg-body-tertiary
       .container
-        a.navbar-brand[href="#"]
-          | GRRSS
+        = link_to "GRRSS", root_path, class: "navbar-brand"
         button.navbar-toggler[type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"]
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.me-auto.mb-2.mb-lg-0
             / TODO: add active class to current page
             li.nav-item
-              = link_to "Feeds", root_path, class: "nav-link"
+              = link_to "Feeds", feeds_path, class: "nav-link"
             li.nav-item
               = link_to "Items", items_path, class: "nav-link"
-            li.nav-item
-              = link_to "Import feeds", import_feeds_feeds_path, class: "nav-link"
+
+          .d-flex
+            .nav-item
+              = link_to "Add feeds", '/add', class: "btn btn-outline-success"
           /   li.nav-item.dropdown
           /     a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"]
           /       |  Dropdown
