--- a/ror/app/views/layouts/application.html.slim
+++ b/ror/app/views/layouts/application.html.slim
@@ -18,9 +18,9 @@ html
           ul.navbar-nav.me-auto.mb-2.mb-lg-0
             / TODO: add active class to current page
             li.nav-item
-              = link_to "Feeds", feeds_path, class: "nav-link"
+              = link_to "Feeds", '/feeds', class: "nav-link"
             li.nav-item
-              = link_to "Items", items_path, class: "nav-link"
+              = link_to "Items", '/items', class: "nav-link"
 
           .d-flex
             .nav-item
